fix: overflow

--- a/src/components/event.css
+++ b/src/components/event.css
@@ -8,6 +8,7 @@
 .event-container {
   height: 850px;
   padding: 0 30px;
+  overflow: auto;
 }
 
 .event {
